---
source: compiler-core/src/javascript/tests/custom_types.rs
expression: "\npub fn one() { One }\npub record One { One }\n"
---
import { CustomType as $CustomType } from "../rakun.mjs";

export class One extends $CustomType {}

export function one() {
  return new One();
}
